# JSRepoAnalysis

./: .env.sample  .gitignore  CleanUpOther.py  README.md  Solution.md  code_processor.py  config.py  createSecret.js  create_secret.py  fixfirestore.py  inventory.csv  main.py  output.csv  pyproject.toml  read_record.py  reprocess.sh  requirements.txt  run_tests.sh  setup.py  ui_app.py
.github/workflows/: python-ci.yml
BQ/: BQ_Views.sql  create_table.sql  create_view.sql  insert_processed_data.sql  quick_view.sql
agent/: evaluate_code_agent.py
docs/: PRD.md  PRODUCT_REQUIREMENTS.md  TDD.md  TECHNICAL_DESIGN.md
prompts/: consolidated_eval copy.txt  consolidated_eval.txt  js_eval copy.txt  js_eval.txt  json_conversion.txt  py_eval.txt  system_instructions.txt
strategies/: base_strategy.py  javascript_strategy.py  language_strategy.py  python_strategy.py  strategy_factory.py
tests/strategies/: test_strategy_factory.py
tests/tools/: test_bigquery.py  test_code_processor.py  test_code_processor_happy_path.py  test_evaluate_code_file.py  test_extract_region_tags.py  test_git_file_processor.py
tools/: base_tool.py  bigquery.py  code_processor.py  evaluate_code_file.py  evaluate_js_code_file.py  evaluate_py_code_file.py  extract_product_info.py  extract_region_tags.py  firestore.py  git_file_processor.py  js_analysis.py  old_code_analyzer.py  ollama_eval.py  product_hierarchy.yaml  read_repo.py
utils/: CleanUpOther.py  data_classes.py  exceptions.py  fixfirestore.py  logger.py  product_catalog.json  read_record.py  temp_del.py
(+95 files in other folders)
